--- a/solli/templates/includes/head.html
+++ b/solli/templates/includes/head.html
@@ -5,8 +5,9 @@
     <title>{% block title %}Solli{% endblock %}</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{% static 'css/output.css' %}"/>
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style_tailwind.css' %}"/>
 
     <!-- Cropper.js CSS -->
     <link href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.css" rel="stylesheet"/>
