--- a/solli/users/templates/users/register.html
+++ b/solli/users/templates/users/register.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="flex-1 flex items-center justify-center overflow-hidden">
-    <div class="w-full max-w-lg p-10 border border-gray-300 rounded-2xl">
+    <div class="w-full max-w-lg h-full max-h-lg p-10 border border-gray-300 rounded-2xl">
 
         <div class="flex mb-6 w-full">
             <button id="btn_pf"
@@ -23,8 +23,8 @@
         </div>
 
 
-        <h1 class="text-3xl font-bold mb-2">Cadastre-se</h1>
-        <h2 class="text-1xl mb-6">Já possui uma conta? <a href="" class="text-emerald-600 hover:text-emerald-800 underline">Entrar</a></h2>
+        <h1 class="text-3xl font-bold mb-1">Cadastre-se</h1>
+        <h2 class="text-1xl mb-2">Já possui uma conta? <a href="" class="text-emerald-600 hover:text-emerald-800 underline">Entrar</a></h2>
 
 
       <form method="post" class="space-y-4" action="{% url 'users:register_user' %}">
