--- a/solli/templates/includes/nav_bar.html
+++ b/solli/templates/includes/nav_bar.html
@@ -8,7 +8,7 @@
       <li><a href="{% url 'donations:list_donations' %}" class="block px-4 py-2 text-white hover:bg-emerald-700 rounded text-lg font-bold">Doações</a></li>
       <li><a href="{#% url 'login' %#}" class="block px-4 py-2 text-white hover:bg-emerald-700 rounded text-lg font-bold">Pedidos</a></li>
       <li><a href="{#% url 'login' %#}" class="block px-4 py-2 text-white hover:bg-emerald-700 rounded text-lg font-bold">Campanhas</a></li>
-        <li><a href="{#% url 'login' %#}" class="block px-4 py-2 text-white hover:bg-emerald-700 rounded text-lg font-bold">Ajude-nos</a></li>
+        <li><a href="/admin/" class="block px-4 py-2 text-white hover:bg-emerald-700 rounded text-lg font-bold">Admin</a></li>
     </ul>
   </nav>
 </header>
