--- a/solli/templates/includes/head.html
+++ b/solli/templates/includes/head.html
@@ -7,13 +7,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style_tailwind.css' %}"/>
+    <!--<link rel="stylesheet" href="{% static 'css/style_tailwind.css' %}"/>-->
 
     <!-- Cropper.js CSS -->
     <link href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.css" rel="stylesheet"/>
 
     <!-- Cropper.js JS -->
     <script src="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+
 
 
 </head>
